app/tasky/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky
  namespace: tasky
spec:
  type: ClusterIP
  selector:
    app: tasky
  ports:
    - name: http
      port: 80
      targetPort: 8080
